package com.example.bookstore;

/**
 * Standalone author element
 * Generated from XSD schema
 */
public class Author {

    public Author() {
    }

}