package com.example.bookstore;

/**
 * Standalone book element
 * Generated from XSD schema
 */
public class Book {

    public Book() {
    }

}