package com.example.bookstore;

/**
 * Root element representing a bookstore
 * Generated from XSD schema
 */
public class Bookstore {

    public Bookstore() {
    }

}